@@ -1,5 +1,9 @@
 2013-12-21  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* LoadSensor.wrl: 
+
+2013-12-21  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* LoadSensor.wrl: 
 
